moving images to shared

--- a/sticky_notes.safariextension/Info.plist
+++ b/sticky_notes.safariextension/Info.plist
@@ -30,7 +30,7 @@
 				<key>Identifier</key>
 				<string>sticky_notes</string>
 				<key>Image</key>
-				<string>safari/icon.png</string>
+				<string>shared/images/icon.png</string>
 				<key>Label</key>
 				<string>sticky_notes</string>
 				<key>Palette Label</key>
