first try at the firefox adapter

--- a/sticky_notes.safariextension/firefox/package.json
+++ b/sticky_notes.safariextension/firefox/package.json
@@ -5,8 +5,8 @@
   "version"      : "1.0",
   "id"           : "jid1-gAkXSlruh1Chlg",
 
-  "icon"         : "data/images/icon.png",
+  "icon"         : "data/shared/images/icon.png",
 
-  "permissions"  : { "private-browsing"         : "true",
+  "permissions"  : { "private-browsing"         : "true"
                    }
 }
